--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -6,6 +6,17 @@ Add your content here.
 
 =Parts List=
 
+|| Part || Source || Cost || Quantity || Link ||
+|| Open EVSE Board || Open EVSE || $85 || 1 || http://code.google.com/p/open-evse/ ||
+|| 30A Relay || Digikey || $13.00 || 1 || http://search.digikey.com/us/en/products/T92P7D22-12/PB486-ND/365921 ||
+|| Current Transformer || Digikey || $10.65 || 1 || http://search.digikey.com/us/en/products/CR8420-1000-G/582-1018-ND/1045174 ||
+|| 12V DC Power Supply ||  ||  || 1 || ||
+|| 30A J1772 cord || see Wiki || $260 || 1 || http://code.google.com/p/open-evse/wiki/J1772CableSources ||
+|| 30A AC Plug L6-30 || Stay Online || $29.00 || 1 || http://www.stayonline.com/detail.aspx?ID=15695 ||
+|| NEMA Enclosure || || || 1 ||  ||
+|| NEMA Cable Glands ||  ||  || 1 ||  ||
+
+
 
 
 = Details =
