Edited wiki page EVSE_by_thinwing through web user interface.

--- a/wiki/EVSE_by_thinwing.wiki
+++ b/wiki/EVSE_by_thinwing.wiki
@@ -19,7 +19,7 @@ Following photos illustrate installation of v1 openevse in a high quality altech
 
 
 = Details =
-*Method / materials*.
+Following photos show dremel tool and bits to cut the slot for adafruit lcd.Textured plastic and g-10 fiberglass sheet shown as well as 2x1 spade connectors used to tap relay l1/l2 for powersupply ac source.Also shown is .040 polycarbonate sheet used for lcd window.I used an aerospace epoxy called hysol ,but any 2 part epoxy would work.Sealing of components to water ,securing ct ,and mounting g-10 protective shields was done using black rtv silicone adhesive.050 aluminum sheet was used for component shelf and 1/4 in plastic standoffs with stainless 4/40 screws and nuts to secure evse board to shelf.30 amp relay/contactor and infinity power supply I used were secured using 6/32 hardware.The altech enclosure measures 6in by 6in and is about 4 in deep.There is plenty of room without component crowding to mount an arduino evse version as well as new power supply available from openevse.The finished evse is very sturdy and I think good looking.As always,your experience may vary .
 
 http://farm8.staticflickr.com/7129/7042258305_44fdc58999_z.jpg
 
