--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -9,6 +9,8 @@ OpenEVSE has been tested with:
 || Year || Make || Model || Car Specific Features || Known Issues ||
 || 2011 - 2012 || Nissan || LEAF || Timers - Supported || None ||
 || 2011 - 2012 || Chevy || VOLT || Timers - Supported || None ||
+|| 2012        || Toyota|| PiP || Timers - Supported || None ||
+
 
 = Reports =
 If you have tested OpenEVSE on other vehicles please send a compatibility report to chris1howell83@gmail.com...
