Edited wiki page EVSE_by_mwolrich through web user interface.

--- a/wiki/EVSE_by_mwolrich.wiki
+++ b/wiki/EVSE_by_mwolrich.wiki
@@ -1,4 +1,4 @@
-#summary A portable EVSE built with a Open EVSE board.
+#summary A portable EVSE built with an Open EVSE board.
 
 = Introduction =
 
