--- a/wiki/EVSE_by_mwolrich.wiki
+++ b/wiki/EVSE_by_mwolrich.wiki
@@ -51,4 +51,6 @@ If using the L6-30 30A cable/outlet/breaker set the EVSE board to a maximum of 2
 
 <a href="http://s461.photobucket.com/albums/qq333/mitch672/OpenEVSE/?action=view&amp;current=OpenEVSEassembly5.jpg" target="_blank"><img src="http://i461.photobucket.com/albums/qq333/mitch672/OpenEVSE/OpenEVSEassembly5.jpg" border="0" alt="grounding, grounding conductors from advanced PS, AC power cord, and J-1772 cable">
 
+<a href="http://s461.photobucket.com/albums/qq333/mitch672/OpenEVSE/?action=view&amp;current=OpenEVSEassembly1.jpg" target="_blank"><img src="http://i461.photobucket.com/albums/qq333/mitch672/OpenEVSE/OpenEVSEassembly1.jpg" border="0" alt="OpenEVSE powered up, bench testing before installation">
+
 <a href="http://s461.photobucket.com/albums/qq333/mitch672/OpenEVSE/?action=view&amp;current=OpenEVSEassembly12.jpg" target="_blank"><img src="http://i461.photobucket.com/albums/qq333/mitch672/OpenEVSE/OpenEVSEassembly12.jpg" border="0" alt="OpenEVSE completed, completed with cover closed, and J-1772 and L6-30 seen, 120V adapter installed for testing">
