Edited wiki page Open_EVSEs through web user interface.

--- a/wiki/Open_EVSEs.wiki
+++ b/wiki/Open_EVSEs.wiki
@@ -4,9 +4,9 @@
 = chris1howell Leaf =
 Built June 2011 - Upgraded February 2012
 
-<a href="http://www.flickr.com/photos/60192309@N05/6863642255/" title="2012-02-11_15-11-48_739 by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7204/6863642255_0dac6333e0_z.jpg" width="640" height="360"</a>
+http://farm8.staticflickr.com/7204/6863642255_0dac6333e0_z.jpg
 
-<a href="http://www.flickr.com/photos/60192309@N05/6863646271/" title="2012-02-11_15-15-15_908 by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7048/6863646271_b797b5479d_z.jpg" width="640" height="360"</a>
+http://farm8.staticflickr.com/7048/6863646271_b797b5479d_z.jpg
 
 = lincomatic Leaf =
 Built July 2011
@@ -21,22 +21,27 @@ http://blog.lincomatic.com/wp-content/uploads/2012/02/j1772lcd.jpg
 = George Leaf =
 Built October 2011
 
-<a href="http://www.flickr.com/photos/60192309@N05/6897532081/" title="2012-02-18_08-14-56_790 by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7046/6897532081_a394880e13_z.jpg" width="360" height="640"</a>
+http://farm8.staticflickr.com/7046/6897532081_a394880e13_z.jpg
 
-<a href="http://www.flickr.com/photos/60192309@N05/6165250696/" title="2011-09-19_21-04-01_742 by chris1howell, on Flickr"><img src="http://farm7.staticflickr.com/6164/6165250696_56619ea5f4_z.jpg" width="640" height="360"</a>
+http://farm7.staticflickr.com/6164/6165250696_56619ea5f4_z.jpg
 
-<a href="http://www.flickr.com/photos/60192309@N05/6140943244/" title="2011-09-09_14-29-53_33 by chris1howell, on Flickr"><img src="http://farm7.staticflickr.com/6186/6140943244_3ed9cb9443_z.jpg" width="640" height="360"</a>
+http://farm7.staticflickr.com/6186/6140943244_3ed9cb9443_z.jpg
 
 = GlennD Leaf =
 Built February 2012
 
-<a href="http://www.flickr.com/photos/60192309@N05/6898998841/" title="IMG_0194 by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7193/6898998841_ed91d5247a_z.jpg" width="640" height="480"</a>
+http://farm8.staticflickr.com/7193/6898998841_ed91d5247a_z.jpg
 
-<a href="http://www.flickr.com/photos/60192309@N05/6897681171/" title="IMG_0193 by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7188/6897681171_b9c0c8b321_z.jpg" width="480" height="640"</a>
+http://farm8.staticflickr.com/7188/6897681171_b9c0c8b321_z.jpg
 
 = thinwing Leaf =
 Built February 2012
 
-<a href="http://www.flickr.com/photos/60192309@N05/6941614449/" title="photo by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7039/6941614449_a13fef1437_z.jpg" width="480" height="640"</a>
+http://farm8.staticflickr.com/7039/6941614449_a13fef1437_z.jpg
 
-<a href="http://www.flickr.com/photos/60192309@N05/6941612397/" title="photo by chris1howell, on Flickr"><img src="http://farm8.staticflickr.com/7042/6941612397_ac0f8a6e6f_z.jpg" width="480" height="640"</a>
+http://farm8.staticflickr.com/7042/6941612397_ac0f8a6e6f_z.jpg
+
+= jjlink i-MiEV =
+Built May 2012
+
+http://farm8.staticflickr.com/7079/7146190951_eb8b00552f.jpg
