Edited wiki page Open_EVSEs through web user interface.

--- a/wiki/Open_EVSEs.wiki
+++ b/wiki/Open_EVSEs.wiki
@@ -45,3 +45,9 @@ http://farm8.staticflickr.com/7042/6941612397_ac0f8a6e6f_z.jpg
 Built May 2012
 
 http://farm8.staticflickr.com/7079/7146190951_eb8b00552f.jpg
+
+
+= mwolrich (mitch672) PiP =
+Built March-April 2012
+
+http://i461.photobucket.com/albums/qq333/mitch672/OpenEVSE/PhotoApr2894212AM.jpg
