Edited wiki page Open_EVSEs through web user interface.

--- a/wiki/Open_EVSEs.wiki
+++ b/wiki/Open_EVSEs.wiki
@@ -51,3 +51,10 @@ http://farm8.staticflickr.com/7079/7146190951_eb8b00552f.jpg
 Built March-April 2012
 
 http://i461.photobucket.com/albums/qq333/mitch672/OpenEVSE/PhotoApr2894212AM.jpg
+
+= Barbouri Leaf =
+Built April 2012
+
+http://farm8.staticflickr.com/7094/6943290954_6912b540e2_z.jpg
+
+http://farm8.staticflickr.com/7079/6943291016_0601f76ef5_z.jpg
