--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -6,9 +6,9 @@ OpenEVSE was designed to be fully compliant with the J1772:2010 Standard and sho
 
 = Vehicles Tested =
 OpenEVSE has been tested with:
-|| Year || Make || Model || Car Specific Features || Known Issues ||
-|| 2011 - 2012 || Nissan || LEAF || Timers - Supported || None ||
-|| 2011 - 2012 || Chevy || VOLT || Timers - Supported || None ||
-|| 2012        || Toyota|| PiP || Timers - Supported || None ||
-|| 2012 || Mitsubishi || i-MiEV || || None ||
+|| Year || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
+|| 2011 - 2012 || Nissan || LEAF || Timers - Supported || 3.3kW 16A @240V || None ||
+|| 2011 - 2012 || Chevy || VOLT || Timers - Supported || 3.3kW 16A @ 240V || None ||
+|| 2012 || Toyota|| PiP || Timers - Supported || || 2.8kW 12A @ 240V || None ||
+|| 2012 || Mitsubishi || i-MiEV || || || 3.3kwW 16A @ 240V || None ||
 If you have tested OpenEVSE on other vehicles please send a compatibility report to chris1howell83@gmail.com...
