--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -9,6 +9,8 @@ OpenEVSE has been tested with:
 || Year || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
 || 2011 - 2012 || Nissan || LEAF || Timers - Supported || 3.3kW 16A @240V || None ||
 || 2011 - 2012 || Chevy || VOLT || Timers - Supported || 3.3kW 16A @ 240V || None ||
-|| 2012 || Toyota|| PiP || Timers - Supported || || 2.8kW 12A @ 240V || None ||
-|| 2012 || Mitsubishi || i-MiEV || || || 3.3kwW 16A @ 240V || None ||
+|| 2012 || Toyota|| PiP || Timers - Supported || 2.8kW 12A @ 240V || None ||
+|| 2012 || Mitsubishi || i-MiEV || || 3.3kW 16A @ 240V || None ||
+
+
 If you have tested OpenEVSE on other vehicles please send a compatibility report to chris1howell83@gmail.com...
