--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -1,13 +1,19 @@
 #summary One-sentence summary of this page.
 
-<wiki:toc max_depth="1" />
 
-#sidebar TableOfContents
+TableOfContents
 * [Articles HOWTO articles]
-* [ArticlesXSS Web security]     
-* [ArticlesDom DOM manipulation]     
-* [ArticlesStyle CSS and style]     
-* [ArticlesTips Tips and tricks]   
-* [DOMReference DOM reference]   
-* [HTMLElements HTML reference]   
+
+* [ArticlesXSS Web security]
+     
+* [ArticlesDom DOM manipulation]
+     
+* [ArticlesStyle CSS and style]
+     
+* [ArticlesTips Tips and tricks]
+   
+* [DOMReference DOM reference]
+   
+* [HTMLElements HTML reference]
+   
 * [CSSReference CSS reference]
