--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -1,10 +1,12 @@
 #summary Sidebar for Guava Explained.
   
-* [OpenEVSE_boards OpenEVSE]
+*OpenEVSE
+ * [OpenEVSE_boards OpenEVSE]
+ * [Open_EVSE_Specs OpenEVSE specs]
   * EVSE Examples
     * [EVSE_by_mwolrich EVSE by mwolrich]
     * [EVSE_by_thinwing EVSE by thinwing]
     * [ExampleEVSE Basic EVSE by chris1howell]
     * [EVSE_Example75A 75A EVSE by chris1howell]
-  * [EVSE_TESTING Testing your EVSE]
+* [EVSE_TESTING Testing your EVSE]
    
