--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -10,5 +10,22 @@
     * [EVSE_EV_ChargeAmerica_Upgrade Rebuild of broken EVCS EVSE]
     * [ExampleEVSE Basic EVSE by chris1howell]
     * [EVSE_Example75A 75A EVSE by chris1howell]
-  * [EVSE_TESTING Testing your EVSE]
+  * J1772
+    * [J1772CableSources Sources for J1772 cables]
+    * [J1772Basics Basics of J1772]
+  * How to...
+    * [LoadingFirmware Programmers]
+    * [Stepbystepinstructionstouploadcode Loading Firmware]
+    * [AdaFruitRGBdisplay Add a display]
+    * [MaxCurrent Set Default Current]
+  * Do it Yourself
+    * [OpenEVSEv1partslist Parts list to DIY]
+    * [PCBProduction Have PCB fabricated for you DIY project]
+
+  * Ordering
+    * [Ordering Order OpenEVSE and kits]
+
+
+
+
    
