--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -11,10 +11,10 @@
     * [ExampleEVSE Basic EVSE by chris1howell]
     * [EVSE_Example75A 75A EVSE by chris1howell]
   * *SAE J1772 Standard*
-    * [J1772CableSources Sources for J1772 cables]
     * [J1772Basics Basics of J1772]
+    * [J1772CableSources Sources for J1772 cables]
   * *How to...*
-    * [LoadingFirmware Loading Firmware]
+    * [LoadingFirmware Load Firmware]
     * [AdaFruitRGBdisplay Add a display]
     * [MaxCurrent Set Default Current]
   * *Do it Yourself*
