--- a/wiki/OpenEVSE_boards.wiki
+++ b/wiki/OpenEVSE_boards.wiki
@@ -2,12 +2,12 @@
 #labels Featured
 
 || || OpenEVSE || Arduino Shield || Through Hole ||
-|| Picture ||http://farm9.staticflickr.com/8160/7349066816_a0c3bb7618_n.jpg||http://farm7.staticflickr.com/6222/7003031805_747830f4b7_n.jpg||http://farm8.staticflickr.com/7215/7163862721_3febb4d0e5_n.jpg||
+|| Picture ||http://farm9.staticflickr.com/8160/7349066816_a0c3bb7618_n.jpg||http://farm7.staticflickr.com/6222/7003031805_747830f4b7_n.jpg||http://farm8.staticflickr.com/7221/7165161217_9640526ed2_n.jpg||
 || || Prebuilt only || Kit || DIY files only ||
 || Firmware || pre-loaded || Requires Arduino UNO || ||
 || GFCI || Yes || Yes || Yes ||
 || Diode Check || Yes || Yes || Yes ||
-|| Ground/Stuck Relay Check || With Advanced Power Supply || With Advanced Power Supply || With Advanced Power Supply or L1L2Sense Board||
+|| Ground/Stuck Relay Check || With Advanced Power Supply || With Advanced Power Supply || With Advanced Power Supply or L1/L2 sense board||
 || Size || 2.2"x 1.75"x 1/2" || 3" x 2" x 1" || 2.5" x 2.39" x 1/2" ||
 || IO pins || most unused accessible || all pins accessible || few pins accessible ||
 || Programmer || ISP or FTDI || ISP or USB/FTDI || ISP or FTDI ||
