Edited wiki page PCBProduction through web user interface.

--- a/wiki/PCBProduction.wiki
+++ b/wiki/PCBProduction.wiki
@@ -6,5 +6,5 @@ So you downloaded a .brd file or created your own... What now?
 
 || Name || Turn around || Made in || Setup Fee || Cost || Shipping || URL ||
 || BatchPCB || 3 - 4 weeks || China || $10 || $2.50sq/in || varies || http://www.batchpcb.com ||
-|| DorkBotPDX || 2 weeks || USA || $0 || $5.00sq/in for 3 boards || $0 || http://dorkbotpdx.org/wiki/pcb_order ||
+|| OSH Park || 2 weeks || USA || $0 || $5.00sq/in for 3 boards || $0 || http://oshpark.com/ ||
 || PCB Train || 1 - 10 days || UK || varies || varies || varies || http://www.pcbtrain.co.uk/ ||
