Edited wiki page sidebar through web user interface.

--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -18,7 +18,8 @@
     * [AdaFruitRGBdisplay Add a display]
     * [MaxCurrent Set Default Current]
   * *Do it Yourself*
-    * [OpenEVSEv1partslist Parts list to DIY]
+    * [OpenEVSEv1partslist Parts list to DIY V1]
+    * [OpenEVSEv2partslist Parts list for DIY V2]
     * [PCBProduction Have PCB fabricated for you DIY project]
   * *Ordering*
     * [Ordering Order OpenEVSE and kits]
